update mentee by id
